# promptspace

./: .#README.md  Makefile  README.md  TODO  promptspace.kdevelop
data/: xab  xac
doc/: Design.txt  lacroute_thesis_sm.ps
doc/final-report/: amsldoc.dvi  brainsmall1.eps  brainsmall1.ppm  grids.eps  gridtypes.eps  physicalvisual.eps  progrerep.aux  report-part-2.tex  report.aux  report.tex  simplevolumevis.eps  visprosses.eps
images/: raycast-gouraud.pgm  raycast-noshade.pgm
promptspace-gui/: promptspace-gui.glade
promptspace-gui/src/: Makefile  Makefile.am  Makefile.in  app1.cc  app1.hh  app1_glade.cc  app1_glade.hh  autogen.sh  configure  configure.in  promptspace-gui.cc
src/: ANSILibrary.hxx  Application.cxx  GUI.cxx  GUI.hxx  General.hxx
src/geometry/: Angles.hxx  Prism.cxx  Prism.hxx  Ray.hxx  TMatrix.cxx  TMatrix.hxx  Transformation.hxx
src/java/: Cube.java  Phong.java  Renderer.java  ViewT.java
src/math/: Derived_Vectors.hxx  Matrix.hxx  Numerical_Vector.hxx  Numerical_Vector_Generic.hxx  Numerical_Vector_Minor.hxx
src/scene/: Camera.hxx  Component.hxx  Model.hxx  Screen.hxx  Viewing_Transformation.hxx
src/shading/: Attribute.hxx  Color.cxx  Color.hxx  Light_Source.hxx  Phong_Shader.hxx
src/test/: Test.cxx
src/util/: Log.cxx  Log.hxx
src/volume/: Image.hxx  Slice_Visualizer.cxx  Slice_Visualizer.hxx  Volume.cxx  Volume.hxx  Volume_Coder.hxx  Volume_Visualizer.cxx  Volume_Visualizer.hxx  Voxel.hxx
