# generated 2000/1/6 21:43:29 EET by exa@orion.(none)
# using glademm V0.5.5
#
# newer (non customized) versions of this file go to Makefile.am_glade
bin_PROGRAMS = promptspace-gui

promptspace_gui_SOURCES = \
	promptspace-gui.cc\
	app1_glade.cc \
	app1.cc 

noinst_HEADERS = \
	app1_glade.hh \
	app1.hh 

CXXFLAGS = $(GNOMEMM_INCLUDEDIR)
LDFLAGS= $(GNOMEMM_LIBDIR) $(GNOME_LIBDIR)

promptspace_gui_LDADD = $(GNOMEMM_LIBS) $(GNOMEUI_LIBS)
